# rideviz-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MARKETING_CONTEXT.md  QUICK-REF.md  README.md  TESTING.md  debug_out.apng  docker-compose.yml  render.yaml  start.bat  start.sh  test-manual.md  test-render.bat  test-render.sh  test_dup.txt  visual_update.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: BUILD-SUMMARY.md  LIVE-PREVIEW-PLAN.md  QUICK-REF.md  RIDEVIZ_RS_FRONTEND.md
rideviz-web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
rideviz-web/public/: robots.txt  sitemap.xml
rideviz-web/src/: App.tsx  main.tsx
rideviz-web/src/analytics/: posthog.ts
rideviz-web/src/api/: client.test.ts  client.ts
rideviz-web/src/engine/: animate.ts  gradients.ts  project.ts  render.ts  types.ts  watermark.test.ts  watermark.ts
rideviz-web/src/storage/: history.ts
rideviz-web/src/styles/: animations.css  foundation.css  index.css  primitives.css
rideviz-web/src/test/: setup.ts
rideviz-web/src/types/: api.ts
src/: config.rs  error.rs  lib.rs  license.rs  main.rs  state.rs
src/pipeline/: animate.rs  mod.rs  prepare.rs  process.rs  progress.rs  rasterize.rs  render.rs
src/pipeline/parse/: fit.rs  gpx.rs  mod.rs
src/routes/: health.rs  mod.rs  payment.rs  strava.rs  upload.rs  visualize.rs
src/types/: activity.rs  gradient.rs  mod.rs  viz.rs
tests/: export_video_protection.rs  health.rs  payment.rs  upload.rs  visualize.rs
tmp/pro_review/: ffprobe.json
(+19 files in other folders)
