[package]
name = "rideviz-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
fitparser = "0.6"
resvg = "0.40"
tiny-skia = "0.11"
usvg = "0.40"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
apng = { version = "0.3", features = ["png"] }
rayon = "1"
ffmpeg-next = "7"
png = "0.17"
tempfile = "3"
